fix: line highlight and code title not work in shiki mode

--- a/packages/theme-default/src/layout/DocLayout/docComponents/index.module.scss
+++ b/packages/theme-default/src/layout/DocLayout/docComponents/index.module.scss
@@ -67,3 +67,8 @@
 .inline-link {
   display: inline;
 }
+
+// For the className injected by shiki rehype plugin
+:global(span.code-line-highlighted) {
+  background-color: var(--rp-code-line-highlight-color);
+}
