--- a/packages/theme-default/src/components/Search/index.module.scss
+++ b/packages/theme-default/src/components/Search/index.module.scss
@@ -90,6 +90,7 @@
       margin-left: 5px;
       margin-right: 40px;
       font-weight: 500;
+      white-space: nowrap;
       color: var(--rp-c-text-2);
       transition: all 0.3s;
     }
