--- a/packages/theme-default/src/layout/DocLayout/docComponents/code/index.module.scss
+++ b/packages/theme-default/src/layout/DocLayout/docComponents/code/index.module.scss
@@ -1,3 +1,11 @@
+:global(.rspress-code-content):hover {
+  .code-button-group {
+    > button {
+      opacity: 1;
+    }
+  }
+}
+
 .code-button-group {
   position: absolute;
   right: 20px;
@@ -10,12 +18,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    opacity: 0;
   }
+
   svg {
     opacity: inherit;
     width: 20px;
     height: 20px;
-    transition: all 0.3s ease;
+    transition: all 0.2s ease;
     color: var(--rp-c-text-3);
     &:hover {
       color: var(--rp-c-text-2);
