--- a/packages/plugin-preview/static/global-styles/internal.css
+++ b/packages/plugin-preview/static/global-styles/internal.css
@@ -1,4 +1,4 @@
-:root .rspress-preview-code div[class*='language-'] {
+:root .rspress-preview div[class*='language-'] {
   margin: 0;
   border-radius: 0;
   height: 100%;
