--- a/packages/theme-default/src/layout/DocLayout/index.module.scss
+++ b/packages/theme-default/src/layout/DocLayout/index.module.scss
@@ -105,6 +105,7 @@
     :global(.rspress-doc),
     :global(.rspress-doc-footer) {
       padding: 0 48px;
+      box-sizing: border-box;
       width: calc(100vw - var(--rp-aside-width) - var(--rp-sidebar-width));
     }
   }
@@ -119,6 +120,7 @@
   .content {
     :global(.rspress-doc),
     :global(.rspress-doc-footer) {
+      box-sizing: content-box;
       width: calc(100vw - var(--rp-sidebar-width) - var(--rp-aside-width));
       padding: 0
         max(
