--- a/packages/theme-default/src/layout/DocLayout/index.module.scss
+++ b/packages/theme-default/src/layout/DocLayout/index.module.scss
@@ -104,7 +104,7 @@
     padding: 48px 0 72px 0;
     :global(.rspress-doc),
     :global(.rspress-doc-footer) {
-      padding: 0 48px;
+      padding: 0 24px;
       box-sizing: border-box;
       width: calc(100vw - var(--rp-sidebar-width) - var(--rp-aside-width));
     }
@@ -123,7 +123,7 @@
       box-sizing: border-box;
       width: calc(100vw - var(--rp-sidebar-width) - var(--rp-aside-width));
       padding: 0 48px;
-      max-width: 960px;
+      max-width: calc(960px + 48px * 2);
       margin: auto;
     }
   }
