--- a/packages/theme-default/src/layout/DocLayout/index.module.scss
+++ b/packages/theme-default/src/layout/DocLayout/index.module.scss
@@ -106,7 +106,9 @@
     :global(.rspress-doc-footer) {
       padding: 0 48px;
       box-sizing: border-box;
-      width: 100%;
+      width: calc(100vw - var(--rp-sidebar-width) - var(--rp-aside-width));
+      max-width: calc(960px + 48px * 2);
+      margin: auto;
     }
   }
 }
@@ -120,17 +122,10 @@
   .content {
     :global(.rspress-doc),
     :global(.rspress-doc-footer) {
-      box-sizing: content-box;
+      box-sizing: border-box;
       width: calc(100vw - var(--rp-sidebar-width) - var(--rp-aside-width));
-      padding: 0
-        max(
-          48px,
-          calc(
-            (100vw - var(--rp-sidebar-width) - var(--rp-aside-width) - 960px) /
-              2
-          )
-        );
-      max-width: 960px;
+      padding: 0 48px;
+      max-width: calc(960px + 48px * 2);
       margin: auto;
     }
   }
