chore: optimize dark mode style

--- a/packages/theme-default/src/styles/vars.css
+++ b/packages/theme-default/src/styles/vars.css
@@ -49,7 +49,7 @@
 }
 
 .dark {
-  --rp-c-bg: #000;
+  --rp-c-bg: #23272f;
   --rp-c-bg-soft: #2f2f2f;
   --rp-c-bg-mute: #3a3a3a;
   --rp-c-bg-alt: #000;
