--- a/packages/theme-default/src/components/Sidebar/index.module.scss
+++ b/packages/theme-default/src/components/Sidebar/index.module.scss
@@ -141,6 +141,19 @@
   }
 }
 
+:global(.rspress-sidebar-section-header) {
+  display: flex;
+  align-items: center;
+  padding: 8px 0 8px 16px;
+  > span {
+    margin-left: 8px;
+    font-size: 14px;
+    line-height: 20px;
+    color: var(--rp-c-text-1);
+    font-weight: bold;
+  }
+}
+
 :global(.dark) {
   :global(.rspress-sidebar-group)::before {
     background-color: var(--rp-c-bg-mute);
