--- a/packages/theme-default/src/components/Sidebar/index.module.scss
+++ b/packages/theme-default/src/components/Sidebar/index.module.scss
@@ -146,6 +146,8 @@
   align-items: center;
   padding: 8px 0 8px 16px;
   > span {
+    display: flex;
+    align-items: center;
     margin-left: 8px;
     font-size: 14px;
     line-height: 20px;
