--- a/packages/theme-default/src/components/LocalSideBar/index.scss
+++ b/packages/theme-default/src/components/LocalSideBar/index.scss
@@ -14,6 +14,7 @@
   background-color: var(--rp-c-bg);
   padding-left: 10px;
   > button {
+    background-color: transparent;
     padding: 12px;
     transition: color 0.5s;
     &:hover {
