--- a/packages/theme-default/src/styles/vars.css
+++ b/packages/theme-default/src/styles/vars.css
@@ -21,6 +21,7 @@
   --rp-c-text-4: rgba(60, 60, 60, 0.18);
 
   --rp-c-text-code: #476573;
+  --rp-c-text-code-bg: rgb(153 161 179/ 0.1);
 
   --rp-c-brand: #0095ff;
   --rp-c-brand-light: #00aaff;
