feat: add --rp-c-link

--- a/packages/theme-default/src/components/Aside/index.scss
+++ b/packages/theme-default/src/components/Aside/index.scss
@@ -19,16 +19,7 @@
 .aside-active {
   &,
   &:hover {
-    color: var(--rp-c-brand-dark);
+    color: var(--rp-c-link);
     background-color: var(--rp-c-brand-tint);
-  }
-}
-
-.dark {
-  .aside-active {
-    &,
-    &:hover {
-      color: var(--rp-c-brand-light);
-    }
   }
 }
