--- a/packages/theme-default/src/components/Nav/index.module.scss
+++ b/packages/theme-default/src/components/Nav/index.module.scss
@@ -40,15 +40,8 @@
 .singleItem:hover {
   background-color: var(--rp-c-bg-mute);
   cursor: pointer;
-  color: var(--rp-c-brand-dark);
+  color: var(--rp-c-link);
   border-radius: var(--rp-radius);
-}
-
-:global(.dark) {
-  .activeItem,
-  .singleItem:hover {
-    color: var(--rp-c-brand-light);
-  }
 }
 
 .navBarTitle {
