--- a/packages/theme-default/src/components/Overview/index.module.scss
+++ b/packages/theme-default/src/components/Overview/index.module.scss
@@ -26,7 +26,7 @@
   h3,
   h3 > a {
     letter-spacing: -0.01em;
-    color: var(--rp-c-brand);
+    color: var(--rp-c-link);
     font-size: 18px;
     margin-bottom: 1em;
     transition: color 0.5s;
@@ -36,11 +36,6 @@
   h3 > a {
     margin: 0;
     line-height: 1.3;
-  }
-
-  h3 > a:hover {
-    transition: color 0.5s;
-    color: var(--rp-c-brand-dark);
   }
 
   h3:before {
@@ -78,15 +73,6 @@
   a.header-anchor:hover,
   a.header-anchor:focus {
     text-decoration: none;
-  }
-}
-
-:global(.dark) {
-  :global(.overview-index) {
-    h3,
-    h3 > a {
-      color: var(--rp-c-brand-light);
-    }
   }
 }
 
