--- a/packages/theme-default/src/components/Tabs/index.module.scss
+++ b/packages/theme-default/src/components/Tabs/index.module.scss
@@ -42,15 +42,8 @@
 }
 
 .selected {
-  color: var(--rp-c-brand-dark);
-  border-color: var(--rp-c-brand-dark);
-}
-
-:global(.dark) {
-  .selected {
-    color: var(--rp-c-brand-light);
-    border-color: var(--rp-c-brand-light);
-  }
+  color: var(--rp-c-link);
+  border-color: currentColor;
 }
 
 .no-scrollbar::-webkit-scrollbar {
