--- a/packages/theme-default/src/layout/DocLayout/docComponents/index.module.scss
+++ b/packages/theme-default/src/layout/DocLayout/docComponents/index.module.scss
@@ -37,7 +37,7 @@
 :global(summary a) {
   &:not(:global(.header-anchor)) {
     font-weight: 500;
-    color: var(--rp-c-brand-dark);
+    color: var(--rp-c-link);
     transition: color 0.25s;
   }
 
