chore: follow the suggestion

--- a/packages/theme-default/src/components/Sidebar/index.module.scss
+++ b/packages/theme-default/src/components/Sidebar/index.module.scss
@@ -21,7 +21,7 @@
   background: var(--rp-c-bg);
 }
 
-.sidebar-content {
+.sidebarContent {
   overflow-y: auto;
   overflow-x: hidden;
   max-height: calc(100% - var(--rp-nav-height));
