--- a/packages/theme-default/src/styles/vars.css
+++ b/packages/theme-default/src/styles/vars.css
@@ -53,7 +53,7 @@
 
 .dark {
   --rp-c-bg: #23272f;
-  --rp-c-bg-soft: #2b303a;
+  --rp-c-bg-soft: #292e37;
   --rp-c-bg-mute: #343a46;
   --rp-c-bg-alt: #000;
 
