feat: theme supports silky smooth transitions

--- a/packages/theme-default/src/components/SwitchAppearance/index.module.scss
+++ b/packages/theme-default/src/components/SwitchAppearance/index.module.scss
@@ -13,3 +13,30 @@
 :global(.dark) .moon {
   opacity: 1;
 }
+
+:global(html) {
+  &::view-transition-old(root),
+  &::view-transition-new(root) {
+    animation: none;
+
+    mix-blend-mode: normal;
+  }
+
+  &::view-transition-old(root) {
+    z-index: 1;
+  }
+
+  &::view-transition-new(root) {
+    z-index: 9999;
+  }
+}
+
+:global(.dark) {
+  &::view-transition-old(root) {
+    z-index: 9999;
+  }
+
+  &::view-transition-new(root) {
+    z-index: 1;
+  }
+}
