fix(style): improve work break for a tags

--- a/packages/theme-default/src/layout/DocLayout/docComponents/index.module.scss
+++ b/packages/theme-default/src/layout/DocLayout/docComponents/index.module.scss
@@ -66,7 +66,7 @@
 
 .inline-link {
   display: inline;
-  word-break: break-all;
+  overflow-wrap: break-word;
 }
 
 // For the className injected by shiki rehype plugin
