--- a/packages/theme-default/src/components/SocialLinks/index.module.scss
+++ b/packages/theme-default/src/components/SocialLinks/index.module.scss
@@ -12,12 +12,12 @@
   }
 }
 
-a:only-child .social-links-icon {
-  margin-left: 0;
-}
-
 @media (max-width: 768px) {
   .menu-item:before {
     display: none;
+  }
+
+  a:only-child .social-links-icon {
+    margin-left: 0rem;
   }
 }
