feat(theme-default): display complete content of toc in aside component

--- a/packages/theme-default/src/components/Aside/index.scss
+++ b/packages/theme-default/src/components/Aside/index.scss
@@ -1,25 +1,23 @@
 .aside-link {
-  padding-bottom: 1px;
-}
-
-.aside-link-text {
-  padding: 0px 12px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  padding: 0.25rem 0;
+  margin-bottom: 1px;
   border-radius: var(--rp-radius-small) 0 0 var(--rp-radius-small);
-  font-size: 13px;
-  line-height: 1.75rem;
 
   &:hover {
     background-color: var(--rp-c-bg-mute);
   }
+
+  &.aside-active {
+    &,
+    &:hover {
+      color: var(--rp-c-link);
+      background-color: var(--rp-c-brand-tint);
+    }
+  }
 }
 
-.aside-active {
-  &,
-  &:hover {
-    color: var(--rp-c-link);
-    background-color: var(--rp-c-brand-tint);
-  }
+.aside-link-text {
+  padding: 0px 12px;
+  font-size: 0.8125rem;
+  line-height: 1.25rem;
 }
