feat(theme-default): children, outline and fixes for Badge
Improve built-in `<Badge>` components:
- Custom children: this is particularly useful for adding icons.
- `outline` support: more variations!
- Style tweak:
  - use CSS variables from containers to look consistent.
  - fixes default badge being invisible in Dark mode.
  - better vertically aligned with different headings.
- Changes to `type` props:
  - add `info` type to be consistent with containers.
  - `tip` is added as the new default.

Do note that even though this kept untyped `<Badge>` unchanged, it
does introduce a **benign** breaking change to `<Badge type="info">`.

Changes to Docs:
- Badges docs are updated to reflect the new usages and new types.
- This MR correct "Internal Components" to be "Built-in Components".
  (does not involve URL changes due to the use of fragments)

--- a/packages/theme-default/src/components/Badge/index.module.scss
+++ b/packages/theme-default/src/components/Badge/index.module.scss
@@ -1,18 +1,44 @@
 .badge {
-  padding: 0 10px;
-  line-height: 22px;
-  font-size: 12px;
+  font-weight: 500;
+  transition: color 0.25s;
+
+  &.tip {
+    color: var(--rp-container-tip-text);
+    background-color: var(--rp-container-tip-bg);
+  }
 
   &.info {
-    color: #2e3440;
-    background-color: rgba(46, 52, 64, 0.16);
+    color: var(--rp-container-info-text);
+    background-color: var(--rp-container-info-bg);
   }
+
   &.warning {
-    color: #ad850e;
-    background-color: rgba(255, 197, 23, 0.16);
+    color: var(--rp-container-warning-text);
+    background-color: var(--rp-container-warning-bg);
   }
+
   &.danger {
-    color: #ab2131;
-    background-color: rgba(237, 60, 80, 0.16);
+    color: var(--rp-container-danger-text);
+    background-color: var(--rp-container-danger-bg);
+  }
+
+  &.outline {
+    border: 1px solid;
+
+    &.tip {
+      border-color: var(--rp-container-tip-border);
+    }
+
+    &.info {
+      border-color: var(--rp-container-info-border);
+    }
+
+    &.warning {
+      border-color: var(--rp-container-warning-border);
+    }
+
+    &.danger {
+      border-color: var(--rp-container-danger-border);
+    }
   }
 }
