--- a/packages/plugin-api-docgen/static/global-components/API.scss
+++ b/packages/plugin-api-docgen/static/global-components/API.scss
@@ -1,9 +1,11 @@
-table {
-  table-layout: fixed;
-  width: 100%;
+.rspress-plugin-api-docgen {
+  table {
+    table-layout: fixed;
+    width: 100%;
 
-  td {
-    // allow use &#10; to break line
-    white-space: pre-wrap;
+    td {
+      // allow use &#10; to break line
+      white-space: pre-wrap;
+    }
   }
 }
