--- a/packages/theme-default/src/components/Tabs/index.module.scss
+++ b/packages/theme-default/src/components/Tabs/index.module.scss
@@ -2,13 +2,16 @@
   background-color: var(--rp-code-block-bg);
   contain: content;
   border-radius: var(--rp-radius);
+  margin: 1rem 0;
 
   :global(div[class*='language-']) {
-    margin: 6px 0;
+    margin: 0 -0.5rem;
+    border-radius: 0;
+    font-size: 13px;
+  }
 
-    code {
-      background-color: var(--rp-c-bg);
-    }
+  :global(.rspress-code-title) {
+    padding: 8px 16px;
   }
 }
 
@@ -21,6 +24,7 @@
 }
 
 .tab {
+  position: relative;
   color: var(--rp-c-text-2);
   border-bottom: 2px solid transparent;
   box-sizing: border-box;
@@ -30,20 +34,34 @@
   user-select: none;
   transition: all 0.2s ease-in-out;
   cursor: pointer;
-}
 
-.tab:last-child {
-  margin-right: 0;
+  &:last-child {
+    margin-right: 0;
+  }
+
+  &:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 25%;
+    width: 50%;
+    height: 2px;
+    border-radius: 2px;
+    background-color: transparent;
+  }
 }
 
 .not-selected:hover {
   color: var(--rp-c-text-1);
-  border-color: var(--rp-c-gray);
 }
 
 .selected {
   color: var(--rp-c-link);
-  border-color: currentColor;
+  font-weight: 500;
+
+  &:after {
+    background-color: currentColor;
+  }
 }
 
 .no-scrollbar::-webkit-scrollbar {
