Revert "fix: display outline correctly on >=960px <=1280px screen width (#1914)"
This reverts commit b21f5af8c7b35f8d720d0332952e46237b67f1b5.

--- a/packages/theme-default/src/layout/DocLayout/index.module.scss
+++ b/packages/theme-default/src/layout/DocLayout/index.module.scss
@@ -57,6 +57,9 @@
 }
 
 @media (max-width: 960px) {
+  .docLayout {
+    position: relative;
+  }
   .content {
     padding: 36px 24px 72px 24px;
   }
@@ -68,6 +71,7 @@
 
 @media (min-width: 960px) {
   .docLayout {
+    width: 100%;
     display: flex;
   }
 
