--- a/packages/theme-default/src/components/LocalSideBar/index.scss
+++ b/packages/theme-default/src/components/LocalSideBar/index.scss
@@ -1,4 +1,4 @@
-// Only appear on <1280px screen width
+// Only appear on mobile
 .rspress-sidebar-menu {
   position: sticky;
   top: 0;
@@ -36,14 +36,8 @@
   z-index: var(--rp-z-index-backdrop);
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 960px) {
   .rspress-sidebar-menu {
-    display: none;
-  }
-}
-
-@media (min-width: 960px) and (max-width: 1280px) {
-  .rspress-sidebar-menu > button:first-child {
     display: none;
   }
 }
