--- a/packages/theme-default/src/components/Sidebar/index.module.scss
+++ b/packages/theme-default/src/components/Sidebar/index.module.scss
@@ -13,9 +13,8 @@
   z-index: var(--rp-z-index-sidebar);
   width: calc(100vw - 64px);
   max-width: 320px;
-  flex-shrink: 0;
   opacity: 0;
-  transform: translate3d(-100%, 0, 0);
+  transform: translateX(-100%);
   transition:
     opacity 0.5s,
     transform 0.25s ease;
@@ -52,6 +51,12 @@
     mask-image: linear-gradient(transparent, #000 20px),
       linear-gradient(270deg, #000 10px, transparent 0);
     --webkit-mask-image: linear-gradient(270deg, #000 10px, transparent 0);
+  }
+}
+
+@media (min-width: 1440px) {
+  .sidebar {
+    width: var(--rp-sidebar-width);
   }
 }
 
