--- a/packages/theme-default/src/components/SidebarMenu/index.scss
+++ b/packages/theme-default/src/components/SidebarMenu/index.scss
@@ -1,4 +1,4 @@
-// Only appear on mobile
+// Only appear on <1280px screen width
 .rspress-sidebar-menu {
   position: sticky;
   top: 0;
@@ -36,8 +36,14 @@
   z-index: var(--rp-z-index-backdrop);
 }
 
-@media (min-width: 960px) {
+@media (min-width: 1280px) {
   .rspress-sidebar-menu {
+    display: none;
+  }
+}
+
+@media (min-width: 960px) and (max-width: 1280px) {
+  .rspress-sidebar-menu > button:first-child {
     display: none;
   }
 }
@@ -73,7 +79,7 @@
 
 .fly-in-enter-active {
   opacity: 1;
-  transform: translateX(0);
+  transform: translate3d(0, 0, 0);
   transition:
     opacity 300ms,
     transform 300ms;
