--- a/packages/theme-default/src/components/NavHamburger/index.module.scss
+++ b/packages/theme-default/src/components/NavHamburger/index.module.scss
@@ -28,7 +28,7 @@
 .navHamburger:hover .middle {
   top: 6px;
   left: 0;
-  transform: translateX(0);
+  transform: translate3d(0, 0, 0);
 }
 .navHamburger:hover .bottom {
   top: 12px;
@@ -38,7 +38,7 @@
 
 .navHamburger.active .top {
   top: 6px;
-  transform: translateX(0) rotate(225deg);
+  transform: translate3d(0, 0, 0) rotate(225deg);
 }
 .navHamburger.active .middle {
   top: 6px;
@@ -46,7 +46,7 @@
 }
 .navHamburger.active .bottom {
   top: 6px;
-  transform: translateX(0) rotate(135deg);
+  transform: translate3d(0, 0, 0) rotate(135deg);
 }
 
 .navHamburger.active:hover .top,
@@ -74,7 +74,7 @@
 .top {
   top: 0;
   left: 0;
-  transform: translateX(0);
+  transform: translate3d(0, 0, 0);
 }
 .middle {
   top: 6px;
