--- a/packages/theme-default/src/components/Sidebar/index.module.scss
+++ b/packages/theme-default/src/components/Sidebar/index.module.scss
@@ -13,8 +13,9 @@
   z-index: var(--rp-z-index-sidebar);
   width: calc(100vw - 64px);
   max-width: 320px;
+  flex-shrink: 0;
   opacity: 0;
-  transform: translateX(-100%);
+  transform: translate3d(-100%, 0, 0);
   transition:
     opacity 0.5s,
     transform 0.25s ease;
@@ -30,7 +31,7 @@
 .sidebar.open {
   opacity: 1;
   visibility: visible;
-  transform: translateX(0);
+  transform: translate3d(0, 0, 0);
   transition:
     opacity 0.25s,
     transform 0.5s cubic-bezier(0.19, 1, 0.22, 1);
@@ -46,17 +47,11 @@
     margin-top: calc(var(--rp-nav-height) * -1);
     height: 100vh;
     width: var(--rp-sidebar-width);
-    transform: translateX(0);
+    transform: translate3d(0, 0, 0);
     box-shadow: var(--rp-c-shadow-3);
     mask-image: linear-gradient(transparent, #000 20px),
       linear-gradient(270deg, #000 10px, transparent 0);
     --webkit-mask-image: linear-gradient(270deg, #000 10px, transparent 0);
-  }
-}
-
-@media (min-width: 1440px) {
-  .sidebar {
-    width: var(--rp-sidebar-width);
   }
 }
 
